# mess2

./: .gitignore  .gitmodules  README.md
actors/uav/hawk2/: calibration.yaml
actors/ugv/: burger.yaml
actors/ugv/burger1/: config.yaml
agents/agent/: calibration.yaml
agents/hawk2/: calibration.yaml
calibration/burger2/: calibration.yaml
gazebo/models/turtlebot3/: burger.sdf  wafflepi.sdf
gazebo/worlds/: 1x_ugv.sdf
logs/2024_09_12/testing/: topic1.csv  topic2.csv
matlab/algorithms/: main.asv  main.m
matlab/algorithms/config/: edges.csv  threat.csv  vertices.csv
matlab/algorithms/config/actors/: actor1.csv  actor8.csv
matlab/algorithms/config/goals/: actor1.csv  actor10.csv  actor11.csv  actor2.csv  actor3.csv  actor4.csv  actor5.csv  actor6.csv  actor7.csv  actor8.csv  actor9.csv
matlab/algorithms/modules/: actorTurtleBot3.m  createActorFromCSV.m
mess2_ws/src/drivers/mess2_flir_conversion/: CMakeLists.txt  package.xml
mess2_ws/src/drivers/mess2_flir_logger/: CMakeLists.txt  package.xml
mess2_ws/src/drivers/mess2_flir_logger/src/: log_to_jpg.cpp  logger.cpp
mess2_ws/src/extras/algorithms/mess2_algorithm_demos/: CMakeLists.txt  package.xml
mess2_ws/src/extras/algorithms/mess2_algorithm_demos/src/: demo1.cpp  demo_graph.cpp
mess2_ws/src/extras/algorithms/mess2_algorithm_msgs/: CMakeLists.txt  package.xml
mess2_ws/src/extras/algorithms/mess2_algorithm_msgs/msg/: Constraint.msg  Constraints.msg  Edge.msg  Graph.msg  Occupancy.msg  Path.msg  Segment.msg  ThreatField.msg  Vertex.msg
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/: CMakeLists.txt  package.xml
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/include/mess2_algorithm_plugins/: actor.hpp  common.hpp  cost.hpp  edge.hpp  graph.hpp  high_level.hpp  low_level.hpp  template.hpp  threat.hpp  utils.hpp  vertex.hpp
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/include/mess2_algorithm_plugins/graph/: _graph.hpp  adjacency.hpp  vertex.hpp
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/include/mess2_algorithm_plugins/low_level/: _low_level.hpp  history.hpp  queue.hpp  search.hpp
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/src/: actor.cpp  cost.cpp  edge.cpp  graph.cpp  high_level.cpp  low_level.cpp  threat.cpp  utils.cpp  vertex.cpp
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/src/graph/: _graph.cpp  adjacency.cpp  edge.cpp  vertex.cpp
mess2_ws/src/extras/algorithms/mess2_algorithm_plugins/src/low_level/: _low_level.cpp  history.cpp  queue.cpp  search.cpp
mess2_ws/src/extras/mess2_logger_py/: setup.py
mess2_ws/src/logger/mess2_logger_cpp/: CMakeLists.txt  package.xml
mess2_ws/src/logger/mess2_logger_launch/: CMakeLists.txt  package.xml
mess2_ws/src/logger/mess2_logger_py/: package.xml
mess2_ws/src/mess2_algorithms/: CMakeLists.txt  package.xml
mess2_ws/src/mess2_algorithms/src/: dijkstra_client.cpp  dijkstra_server.cpp  dijkstra_ugv_client.cpp  dijkstra_ugv_server.cpp
mess2_ws/src/mess2_gazebo/: package.xml  setup.py
mess2_ws/src/mess2_gazebo/launch/: cscp.launch.py
mess2_ws/src/mess2_gazebo/models/: labenv.sdf
mess2_ws/src/mess2_gazebo/models/ugv/sdf/: ugv_burger.sdf  ugv_wafflepi.sdf
mess2_ws/src/mess2_gazebo/src/: ugv_republisher.py
mess2_ws/src/mess2_gazebo/worlds/: cscp.sdf
mess2_ws/src/mess2_launch/: package.xml  setup.cfg  setup.py
mess2_ws/src/mess2_launch/params/: burger1.yaml  ugv.yaml
mess2_ws/src/mess2_msgs/: CMakeLists.txt  package.xml
mess2_ws/src/mess2_msgs/action/: SetUGVState.action  UAVCalibrate.action  UGVFollowLine.action
mess2_ws/src/mess2_msgs/msg/: DijkstraOut.msg  (+7 more)
mess2_ws/src/mess2_plugins/: CMakeLists.txt  package.xml
mess2_ws/src/mess2_plugins/include/mess2_plugins/: angles.hpp  mess2_plugins.hpp  orientation.hpp  quaternions.hpp  utils.hpp  visibility_control.h
mess2_ws/src/mess2_plugins/src/: angles.cpp  calibration.cpp  orientation.cpp  quaternions.cpp  rotation.cpp  utils.cpp
mess2_ws/src/mess2_uav/hawk_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mess2_ws/src/mess2_uav/hawk_bringup/src/: hawk_diagnostics.cpp  hawk_diagnostics.py
mess2_ws/src/mess2_ugv/: CMakeLists.txt  package.xml
mess2_ws/src/mess2_ugv/mess2_ugv_control/: CMakeLists.txt  package.xml
mess2_ws/src/mess2_ugv/mess2_ugv_control/src/: follow_line_action_client.cpp
mess2_ws/src/mess2_ugv/src/: follow_line_action_client.cpp  follow_line_action_server.cpp  navigate_dijkstra_line_following.cpp  set_ugv_state_action_client.cpp  set_ugv_state_action_server.cpp
mess2_ws/src/sim/mess2_gazebo/: package.xml  setup.cfg
mess2_ws/src/sim/mess2_gazebo/launch/: 1x_ugv.launch.py
mess2_ws/src/sim/mess2_plotter/: CMakeLists.txt  package.xml
mess2_ws/src/sim/mess2_plotter/src/: threat_visualizer.cpp
mess2_ws/src/sim/mess2_visualizer_cpp/: CMakeLists.txt  package.xml
mess2_ws/src/sim/mess2_visualizer_cpp/launch/: real.launch.py
mess2_ws/src/sim/mess2_visualizer_cpp/src/: config.rviz  demo_client.cpp  generate_threat_gif.cpp  generate_threat_gif_frames.cpp  generate_threat_png.cpp  threat_visualizer.cpp
mess2_ws/src/uav/hawk_calibration/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
mess2_ws/src/uav/hawk_calibration/src/: client.cpp  client_fake.cpp  server.cpp  server.py
mess2_ws/src/ugv/turtlebot3_calibration/: CMakeLists.txt  package.xml
mess2_ws/src/ugv/turtlebot3_calibration/src/: client.cpp  server.cpp
mess2_ws/src/ugv/turtlebot3_control/: CMakeLists.txt  package.xml
mess2_ws/src/ugv/turtlebot3_control/src/: follow_curve_server.cpp  follow_line_server.cpp  follow_time_invariant_line_server.cpp
mess2_ws/src/ugv/turtlebot3_time_invariant_control/: CMakeLists.txt  package.xml
mess2_ws/src/ugv/turtlebot3_time_invariant_control/src/: face_time_invariant_heaving_server.cpp  follow_time_invariant_line_server.cpp
modules/: rotation.py  utils.py
ros2/src/ugv/bringup/: CMakeLists.txt  package.xml
ros2/src/ugv/bringup/launch/: robot.launch.py  turtlebot3_state_publisher.launch.py
ros2/src/ugv/bringup/param/: burger.yaml  waffle.yaml  waffle_pi.yaml
(+36 files in other folders)
