<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mess2_plugins</name>
  <version>0.0.0</version>
  <description>ROS2 Jazzy custom plugins, libraries for mess2 CSCP research.</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>mess2_msgs</build_depend>
  <exec_depend>mess2_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
