<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hawk_calibration</name>
  <version>0.0.0</version>
  <description>ROS2 package for calibrating ACE Lab Hawks in the VICON environment.</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mess2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
