<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_time_invariant_control</name>
  <version>0.0.0</version>
  <description>ROS2 custom package for controlling ACE Lab TurtleBot3 unmanned ground vehicles.</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>mess2_msgs</depend>
  <depend>mess2_plugins</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
